--- a/www/main.html
+++ b/www/main.html
@@ -33,7 +33,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
-	<title>Gluster Configuration and Setup</title>
+	<title>Gluster Setup</title>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 	
 	<link rel="stylesheet" type="text/css" href="css/theme.css">
@@ -80,7 +80,8 @@
 <div id="busy" >
 	<div id="busyGraphic"  class="spinner"></div>
 	<span id="busyMsg" ></span>
-	<button id="busyButton" type="button" disabled style="position:absolute; bottom:10px; right:20px; visibility:hidden; ">Next</button>
+	<div id="busyLog"></div>
+	<button id="busyButton" type="button" disabled >Next</button>
 
 </div>
 
@@ -118,8 +119,6 @@
 		<button id="createCluster" type="button" disabled onclick="createCluster()">Create</button>
 	  </div>
 	</div>
-
-
 	
 	<div id="keys"><h2>SSH Keys</h2>
 		<p>SSH keys are available on this host to push to the nodes in the cluster. Once the public key
@@ -159,7 +158,7 @@
 						<th>Device</th>
 						<th>Capacity<br>(GB)</th>
 						<th>Select<br>
-						<input type='checkbox' id='allDisks' onclick="selectAll();" />
+							<input type='checkbox' id='allDisks' onclick="selectAll();" />
 						</th>
 					</tr>
 				</thead>
@@ -182,12 +181,35 @@
 			<option value="virtualisation">Virtualisation</option>
 			<option value="object">Object Storage</option>
 		</select>
-		<p>% Space reserved for snapshots&nbsp;<span id="snapshotValue" >10</span>&nbsp;&nbsp;&nbsp;0
-		<input id="snapshotSpace" onkeyup="updateSnapshot();" onmouseup="updateSnapshot();" type='range' min="0" max="30" value="10" style="position:relative; left:0px;top:5px;margin:0px; padding:0px;">30</p>
-		<p>Volume Group to create (if needed) 
-		<input type='text' id="volGroupName" value="glustervg" ></p>
-		<p>Mount point for the disk
-		<input type="text" id="mountPoint" value="/gluster/brick1" disabled></p>
+		<p>
+		Brick Filesystem Provided by&nbsp;
+		<select id="brickProvider" onchange="switchProvider(this.value)">
+			<option value="LVM" selected="selected">Logical Volume Manager (LVM)</option>
+		</select>
+		</p>
+		<div id="lvm">
+			<div id="snapRequired">
+				Volume Snapshots&nbsp;
+				<label id="snapshotSwitch" class="switch" >
+					<input id="snapshotsRequired" type="checkbox" onclick="snapToggle(this.checked)" class="switch-input">
+					<span class="switch-label" data-on="On" data-off="Off"></span>
+					<span class="switch-handle"></span>
+				</label>
+				<div id="snapReserve">
+					Snapshot Space&nbsp;<span id="snapshotValue" >10%</span>&nbsp;&nbsp;&nbsp;<strong>0</strong>
+					<input id="snapshotSpace" onkeyup="updateSnapshot();" onmouseup="updateSnapshot();" type='range' min="0" max="30" value="10" >
+					<span style="position:relative; left:-15px;" ><strong>30</strong></span>
+				</div>
+
+			</div>
+	
+			Volume Group to create&nbsp;  
+			<input type='text' id="vgName" class="brickInputField" value="gluster" onkeyup="updateLV();" onchange="validateBrickParms(this);" ></p>
+			Logical Volume Name&nbsp;  
+			<input type='text' id="lvName" value="gluster"  class="brickInputField" onfocus="validateBrickParms(this)" onchange="validateBrickParms(this);"></p>
+		</div>
+		<p>Mount point for the brick&nbsp;
+		<input type="text" id="mountPoint" class="brickInputField" value="/gluster/brick1" ></p>
 		<button id="buildBricks" class="bricksButton" type="button" onclick="buildBricks()"><i class="icon-commit-config"></i>Build Bricks</button>
 	</div>
 	
