UI update to improve visibility of enabled/disabled elements

--- a/www/main.html
+++ b/www/main.html
@@ -197,7 +197,7 @@
 				</label>
 				<div id="snapReserve">
 					Snapshot Space&nbsp;<span id="snapshotValue" >10%</span>&nbsp;&nbsp;&nbsp;<strong>0</strong>
-					<input id="snapshotSpace" onkeyup="updateSnapshot();" onmouseup="updateSnapshot();" type='range' min="0" max="30" value="10" >
+					<input id="snapshotSpace" oninput="updateSnapshot();" onkeyup="updateSnapshot();" onmouseup="updateSnapshot();" type='range' min="0" max="30" value="10" >
 					<span style="position:relative; left:-15px;" ><strong>30</strong></span>
 				</div>
 
