Added - hadoop workload type, and -p (port) startup option

--- a/www/main.html
+++ b/www/main.html
@@ -226,6 +226,7 @@
 				<option>Generic</option>
 				<option>Virtualisation</option>
 				<option>Streaming</option>
+				<option>Hadoop</option>
 			</select>
 			<span id="virtInput" style="position:relative;left:40px;opacity:0;transition: opacity .75s;">
 				Target environment&nbsp;
