html added to support the modal dialog window

--- a/www/main.html
+++ b/www/main.html
@@ -26,7 +26,7 @@
    browser dependencies
    * autofocus is html5, needs ie10 or above, or firefox, safari, chrome, opera to work
    * input type of number requires html5 support
-     
+	 
 -->
 
 
@@ -56,6 +56,19 @@
 <body>
 	
 <h1 >Gluster Configuration and Setup</h1>
+
+<div class="md-modal " id="modal-1">
+	<div class="md-content">
+		<h3>Are You Sure?</h3>
+		<div>
+			<span id="modal-text">
+			</span>
+			<span class="ctr_button">
+			</span>
+		</div>
+	</div>
+</div>
+<div class="md-overlay"></div>
 
 <div id="steps" class="invisible" >
 		<ul style="list-style:none; padding:0px;">
