modal elements empty, to be populated by js

--- a/www/main.html
+++ b/www/main.html
@@ -55,19 +55,21 @@
 
 <body>
 	
-<h1 >Gluster Configuration and Setup</h1>
+<h1>Gluster Configuration and Setup</h1>
 
+<!-- main elements to provide a modal window in the UI -->
 <div class="md-modal " id="modal-1">
-	<div class="md-content">
-		<h3>Are You Sure?</h3>
+	<div id="modal-title" class="md-content">
 		<div>
 			<span id="modal-text">
 			</span>
-			<span class="ctr_button">
+			<span id="modal-buttons" class="ctr_button">
 			</span>
 		</div>
 	</div>
 </div>
+
+<!-- Overlay mask used to darken the main window for the modal dialog -->
 <div class="md-overlay"></div>
 
 <div id="steps" class="invisible" >
