--- a/www/main.html
+++ b/www/main.html
@@ -58,14 +58,16 @@
 <h1>Gluster Configuration and Setup</h1>
 
 <!-- main elements to provide a modal window in the UI -->
-<div class="md-modal " id="modal-1">
-	<div id="modal-title" class="md-content">
-		<div>
-			<span id="modal-text">
-			</span>
-			<span id="modal-buttons" class="ctr_button">
-			</span>
+<div class="md-modal " id="modal-window">
+	<div class="md-content">
+		<div id="modal-title">
 		</div>
+		<div id="modal-text">
+		</div>
+		<span class="ctr_button">
+			<button id="modal-btn-cancel" value="cancel" >Cancel</button>
+			<button id="modal-btn-ok" value="ok" >OK</button> 
+		</span>
 	</div>
 </div>
 
