--- a/www/main.html
+++ b/www/main.html
@@ -172,11 +172,11 @@
 	</div>
 	
 	<div id="disks"><h2>Disk Discovery</h2>
-		<p>With the ssh keys in place, the nodes can now be scanned to collect a list of 'unclaimed' disks to be used as gluster bricks<br>
-		</p>
-		<button id="getDisks" type="button" onclick="findDisks()"><i class="icon-search"></i>Find Disks</button>
+	<p>With the ssh keys in place, the nodes can now be scanned to collect a list of 'unclaimed' disks to be used as gluster bricks<br>
+	</p>
+	<button id="getDisks" type="button" onclick="findDisks()"><i class="icon-search"></i>Find Disks</button>
 		<div id="diskArea">
-			<table id="diskTable" cellspacing='0'>
+			<table id="diskHeading" cellspacing='0'>
 				<thead>
 					<tr>
 						<th>Server Name</th>
@@ -187,10 +187,14 @@
 						</th>
 					</tr>
 				</thead>
-				<tbody>
-				</tbody>
 			</table>
-				<button id="registerBricks" class="registerButton hidden" type="button" onclick="registerBricks()">Next</button>
+			<div id="diskRows">
+				<table id="diskTable" cellspacing="0">
+					<tbody>
+					</tbody>
+				</table>
+			</div>
+			<button id="registerBricks" class="registerButton hidden" type="button" onclick="registerBricks()">Next</button>
 		</div>
 
 	</div>
