brickpath applied to UI if provided in config file

--- a/www/main.html
+++ b/www/main.html
@@ -238,7 +238,7 @@
 			<input type='text' id="lvName" value="gluster"  class="brickInputField" onfocus="validateBrickParms(this)" onchange="validateBrickParms(this);"></p>
 		</div>
 		<p>Mount point for the brick&nbsp;
-		<input type="text" id="mountPoint" class="brickInputField" value="/gluster/brick1" ></p>
+		<input type="text" id="mountPoint" class="brickInputField" ></p>
 		<button id="buildBricks" class="bricksButton" type="button" onclick="buildBricks()"><i class="icon-commit-config"></i>Build Bricks</button>
 	</div>
 	
