config file provides lv and vg defaults to the UI

--- a/www/main.html
+++ b/www/main.html
@@ -232,12 +232,11 @@
 
 			</div>
 	
-			<!-- Volume Group to create&nbsp;  
+			Volume Group to create&nbsp;  
 			<input type='text' id="vgName" class="brickInputField" value="gluster" onkeyup="updateLV();" onchange="validateBrickParms(this);" ></p>
 			Logical Volume Name&nbsp;  
 			<input type='text' id="lvName" value="gluster"  class="brickInputField" onfocus="validateBrickParms(this)" onchange="validateBrickParms(this);"></p>
-			-->
-			
+
 		</div>
 		<p>Mount point for the brick&nbsp;
 		<input type="text" id="mountPoint" class="brickInputField" onchange="validateBrickParms(this);"></p>
