name change on toolbar buttons

--- a/www/main.html
+++ b/www/main.html
@@ -76,9 +76,9 @@
 
 <div id="toolbar">
 	<span></span>
-	<button type="button"  class="toolbarBtn icon-info" id="helpme" onclick="alert('Help Selected');" onmouseover="this.title='Get help for this page'" 
+	<button type="button"  class="toolbarBtn icon-info" id="helpBtn" onclick="alert('Help Selected');" onmouseover="this.title='Get help for this page'" 
 			onmouseout="this.title=''"  disabled ></button>
-	<button type="button"  class="toolbarBtn icon-exit" id="quit" onclick="alert('Quit Selected');" onmouseover="this.title='Quit the UI'" 
+	<button type="button"  class="toolbarBtn icon-exit" id="quitBtn" onclick="alert('Quit Selected');" onmouseover="this.title='Quit the UI'" 
 			onmouseout="this.title=''" disabled></button>
 </div>
 
