toolbar assigned a class to enable show/hide functionality

--- a/www/main.html
+++ b/www/main.html
@@ -74,7 +74,7 @@
 <!-- Overlay mask used to darken the main window for the modal dialog -->
 <div class="md-overlay"></div>
 
-<div id="toolbar">
+<div id="toolbar" class='invisible' >
 	<span></span>
 	<button type="button"  class="toolbarBtn icon-info" id="helpBtn" onclick="alert('Help Selected');" onmouseover="this.title='Get help for this page'" 
 			onmouseout="this.title=''"  disabled ></button>
