updated to use the icon-ok css class

--- a/www/main.html
+++ b/www/main.html
@@ -368,11 +368,11 @@
 	</div>	
 	<div id="finish"><h2>Finish</h2>
 		<p>Initial configuration is now complete.
-		<ul>
-			<li class="tick">Cluster created	</li>
-			<li class="tick">Disks discovered</li>
-			<li class="tick">Bricks formated and mounted</li>
-			<li class="tick">Volume created and optimised</li>
+		<ul style="list-style:none;padding-left:0px;">
+			<li class="icon-ok">Cluster created	</li>
+			<li class="icon-ok">Disks discovered</li>
+			<li class="icon-ok">Bricks formated and mounted</li>
+			<li class="icon-ok">Volume created and optimised</li>
 		</ul>
 		</p>
 		<p>At this point the initial configuration steps are complete.</p>
