placing task summary info in a span, for updating with js

--- a/www/main.html
+++ b/www/main.html
@@ -369,10 +369,12 @@
 	<div id="finish"><h2>Finish</h2>
 		<p>Initial configuration is now complete.
 		<ul style="list-style:none;padding-left:0px;">
-			<li class="icon-ok">Cluster created	</li>
-			<li class="icon-ok">Disks discovered</li>
-			<li class="icon-ok">Bricks formated and mounted</li>
-			<li class="icon-ok">Volume created and optimised</li>
+			<span id="tasksummary">
+				<li class="icon-ok">Cluster created	</li>
+				<li class="icon-ok">Disks discovered</li>
+				<li class="icon-ok">Bricks formated and mounted</li>
+				<li class="icon-ok">Volume created and optimised</li>
+			</span>
 		</ul>
 		</p>
 		<p>At this point the initial configuration steps are complete.</p>
