inserted finish.js into the execution flow

--- a/www/main.html
+++ b/www/main.html
@@ -49,6 +49,7 @@
 	<script src="js/brickDefinition.js"></script>
 	<script src="js/ajaxHandler.js"></script>
 	<script src="js/volCreate.js"></script>
+	<script src="js/finish.js"></script>
 	<script src="js/pageLoad.js"></script>
 	
 </head>
