--- a/www/main.html
+++ b/www/main.html
@@ -371,16 +371,19 @@
 		<p>Initial configuration is now complete.
 		<ul style="list-style:none;padding-left:0px;">
 			<span id="tasksummary">
-				<li class="icon-ok">Cluster created	</li>
-				<li class="icon-ok">Disks discovered</li>
-				<li class="icon-ok">Bricks formated and mounted</li>
-				<li class="icon-ok">Volume created and optimised</li>
 			</span>
 		</ul>
 		</p>
+		<!-- the 'nextsteps' span provides a defaul comment for when the 
+			wizard has been used for all steps. If the user quits the 
+			UI before the end, the 'nextsteps' span will be overridden
+			with a different ending message
+		-->
+		<span id="nextsteps">
 		<p>At this point the initial configuration steps are complete.</p>
 		<p>For examples of how to mount the volume click <a id="mountHelp" href="javascript:showMountHelp();">here</a>, or
 		click on the button below to quit the installer.</p>
+		</span>
 		<button id="quitButton" type="button" onclick='finish();' class="nextButton">Quit</button>
 		<p>
 			<span id="goodbye">This browser window/tab may now be closed.</span>
