function rename finish() --> quitUI()

--- a/www/main.html
+++ b/www/main.html
@@ -384,7 +384,7 @@
 		<p>For examples of how to mount the volume click <a id="mountHelp" href="javascript:showMountHelp();">here</a>, or
 		click on the button below to quit the installer.</p>
 		</span>
-		<button id="quitButton" type="button" onclick='finish();' class="nextButton">Quit</button>
+		<button id="quitButton" type="button" onclick='quitUI();' class="nextButton">Quit</button>
 		<p>
 			<span id="goodbye">This browser window/tab may now be closed.</span>
 		</p>
