enabled quit button

--- a/www/main.html
+++ b/www/main.html
@@ -79,8 +79,8 @@
 	<span></span>
 	<button type="button"  class="toolbarBtn icon-info" id="helpBtn" onclick="alert('Help Selected');" onmouseover="this.title='Get help for this page'" 
 			onmouseout="this.title=''"  disabled ></button>
-	<button type="button"  class="toolbarBtn icon-exit" id="quitBtn" onclick="alert('Quit Selected');" onmouseover="this.title='Quit the UI'" 
-			onmouseout="this.title=''" disabled></button>
+	<button type="button"  class="toolbarBtn icon-exit" id="quitBtn" onclick="getSummary();" onmouseover="this.title='Exit the guided setup'" 
+			onmouseout="this.title=''" ></button>
 </div>
 
 <div id="steps" class="invisible" >
