added auto brick selection widget (disabled) to the volcreate page

--- a/www/main.html
+++ b/www/main.html
@@ -289,7 +289,15 @@
 					<option>2</option>
 				</select>
 			</span>
-			
+			<br>
+			Automatic brick selection:
+			<span id="brickautoselect">
+			<label class="switch autoselect" >
+				<input id="autobrick" type="checkbox" class="switch-input" disabled>
+				<span class="switch-label" data-on="On" data-off="Off"></span>
+				<span class="switch-handle"></span>
+			</label>
+			</span>
 			<br>
 			Additional Protocols:
 			<span id="protocols" >
@@ -323,7 +331,7 @@
 		<table id="brickHeaders" cellspacing="0">
 			<thead>
 				<tr>
-					<th >Bricks</th>
+					<th >Bricks / Replica Sets</th>
 					<th >&nbsp;</th>					
 				</tr>
 			</thead>
